--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "nasa-front",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
@@ -20,14 +26,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.0",
     "typescript": "*",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/webpack-env": "^1.18.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.51.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
